feat: Implement Dynamic Skills Component and Refactor Portfolio Structure
- Added DynamicSkillsComponent to display skills with animations and tooltips.
- Removed ExperianceComponent and ProjectsComponent, integrating their functionalities into the new structure.
- Updated HomeComponent to utilize new dynamic components for better modularity.
- Enhanced VisitorCounter to include location data and improved loading/error states in the main page.
- Refactored the page structure to fetch portfolio data dynamically, improving performance and user experience.
- Updated Prisma schema to include new models for Profile, Skill, Project, Experience, BlogPost, and SiteConfig.
- Added types for portfolio data in lib/types.ts for better type safety.
- Modified Footer and Home components for improved styling and responsiveness.
- Updated package.json to include a new database seeding script.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
