--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-table": "^8.21.3",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "motion": "^12.23.0",
     "next": "15.2.3",
@@ -41,6 +43,7 @@
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
+    "resend": "^6.2.0-preview-contacts.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
@@ -50,6 +53,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
