--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   },
   "contributors": [
     {
-    "name": "Nagarjun Avala",
-    "email": "nagarjun.avala.official@gmail.com"
-  }
+      "name": "Nagarjun Avala",
+      "email": "nagarjun.avala.official@gmail.com"
+    }
   ],
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "pro": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -32,20 +33,9 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.1.1",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toggle": "^1.1.10",
-    "@radix-ui/react-toggle-group": "^1.1.11",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.34.1",
-    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -54,7 +44,6 @@
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
-    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
