--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "rewrites": [
         {
-            "source": "/proxy/api/v1/:path*",
-            "destination": "http://YOUR_AWS_IP_HERE:5000/api/v1/:path*"
+            "source": "/proxy/api/:path*",
+            "destination": "http://18.61.161.64:5000/api/:path*"
         }
     ]
 }
