--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
